--- a/src/PreTrip/Content/Site.css
+++ b/src/PreTrip/Content/Site.css
@@ -1,5 +1,4 @@
 ﻿body {
-    padding-top: 50px;
     padding-bottom: 20px;
 }
 
@@ -14,4 +13,44 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+.navbar {
+    border-bottom: 1px solid;
+    background-color: #fff;
+}
+
+.navbar li{
+    padding: 0 0.3em;
+}
+
+.btn {
+    border-radius: 0px;
+    padding: 0.4em 1.2em !important;
+    color: #333333;
+
+    /*Shadow*/
+    -webkit-box-shadow: 0px 0px 11px 2px rgba(0, 0, 0,0.1); 
+    -moz-box-shadow: 0px 0px 11px 2px rgba(0, 0, 0,0.1); 
+    box-shadow: 0px 0px 11px 2px rgba(0, 0, 0,0.1);
+}
+
+/*header com imagem e conteúdo*/
+.bg-img-content {
+    padding: 20em 0;
+}
+
+.bg-img-content .bg-img-content-img {
+    min-height: 5em;
+    background-size: cover;
+}
+
+.bg-img-content .bg-img-content-ctn {
+    padding: 1.2em;
+    background-color: #fff;
+}
+
+.header-ctn {
+    float: none;
+    margin: 0 auto;
 }
