--- a/src/PreTrip/Views/Home/Index.cshtml
+++ b/src/PreTrip/Views/Home/Index.cshtml
@@ -2,10 +2,11 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div class="bg-img-content">
+    <aside class="bg-img-content-img" style="background-image: url(http://www.big1news.com.br/wp-content/uploads/2014/01/beto-carrero-parque.jpg)" />
+    <div class="bg-img-content-ctn header-ctn col-md-8">
+        <div>aaa</div>
+    </div>
 </div>
 
 <div class="row">
