Index tomando forma

--- a/src/PreTrip/Views/Home/Index.cshtml
+++ b/src/PreTrip/Views/Home/Index.cshtml
@@ -3,13 +3,28 @@
 }
 
 <div class="bg-img-content">
-    <aside class="bg-img-content-img" style="background-image: url(http://www.big1news.com.br/wp-content/uploads/2014/01/beto-carrero-parque.jpg)" />
-    <div class="bg-img-content-ctn header-ctn col-md-8">
-        <div>aaa</div>
+    <aside class="bg-img-content-img" 
+           style="background-image: url(http://www.big1news.com.br/wp-content/uploads/2014/01/beto-carrero-parque.jpg)">
+    </aside>
+    <div class="bg-img-content-ctn header-ctn col-sm-10 col-md-8">
+        <p class="text-center" style="font-size: 2rem; margin-top: 2em;">Encontre a melhor opção para a sua viagem.</p>
+
+        <form>
+            <div class="row">
+                <div class="col-xs-5">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search for...">
+                        <span class="input-group-btn">
+                            <button class="btn btn-default" type="button">Go!</button>
+                        </span>
+                    </div><!-- /input-group -->
+                </div><!-- /.col-lg-6 -->
+            </div><!-- /.row --> 
+        </form>
     </div>
 </div>
 
-<div class="row">
+<div class="row row-sep">
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>
