--- a/src/PreTrip/Content/Site.css
+++ b/src/PreTrip/Content/Site.css
@@ -15,19 +15,26 @@ textarea {
     max-width: 280px;
 }
 
+
+/*******************************************/
+/*Início do css*/
+/*******************************************/
+
+/*Barra de menu no topo*/
 .navbar {
     border-bottom: 1px solid;
     background-color: #fff;
+    margin: 0;
 }
+    /*Item de menu da barra*/
+    .navbar li{
+        padding: 0 0.3em;
+    }
 
-.navbar li{
-    padding: 0 0.3em;
-}
-
+/*Todos os botões*/
 .btn {
     border-radius: 0px;
     padding: 0.4em 1.2em !important;
-    color: #333333;
 
     /*Shadow*/
     -webkit-box-shadow: 0px 0px 11px 2px rgba(0, 0, 0,0.1); 
@@ -35,22 +42,45 @@ textarea {
     box-shadow: 0px 0px 11px 2px rgba(0, 0, 0,0.1);
 }
 
-/*header com imagem e conteúdo*/
-.bg-img-content {
-    padding: 20em 0;
+/*Overrides do bootstrap*/
+a.btn-success:hover, 
+a.btn-success:focus, 
+a.btn-success:active, 
+a.btn-success.active, 
+a .open .dropdown-toggle.btn-success{
+    background-color: #47a447 !important;
 }
 
+a.btn-warning:hover, 
+a.btn-warning:focus, 
+a.btn-warning:active, 
+a.btn-warning.active, 
+a .open .dropdown-toggle.btn-warning{
+    background-color: #ed9c28 !important;
+}
+
+/*Header com imagem e conteúdo no meio da imagem*/
 .bg-img-content .bg-img-content-img {
-    min-height: 5em;
+    min-height: 30em;
     background-size: cover;
+    background-position: center;
 }
 
 .bg-img-content .bg-img-content-ctn {
     padding: 1.2em;
     background-color: #fff;
+    margin-top: -20em;
+    margin-bottom: 5em;
+    min-height: 25em;
+
+    /*Shadow*/
+    -webkit-box-shadow: 0px 0px 30px 3px rgba(0, 0, 0,0.3); 
+    -moz-box-shadow: 0px 0px 30px 3px rgba(0, 0, 0,0.3); 
+    box-shadow: 0px 0px 30px 3px rgba(0, 0, 0,0.3);
 }
 
 .header-ctn {
     float: none;
     margin: 0 auto;
 }
+
