--- a/src/PreTrip/Views/Shared/_Layout.cshtml
+++ b/src/PreTrip/Views/Shared/_Layout.cshtml
@@ -24,12 +24,16 @@
                     @{
                         //Atributos comuns de cada botão do menu
                         var att = new {
-                          @class = "btn navbar-btn"
+                          @class = "btn navbar-btn btn"
                         };
+
+                        //Pegos os atributos padrão à todos e adiciono o único a cada item
+                        var attLogin = new { @class = att.@class + " btn-success" };
+                        var attCadastro = new { @class = att.@class + " btn-warning" };
                     }
 
-                    <li>@Html.ActionLink("Logar", "Index", "Home", att)</li>
-                    <li>@Html.ActionLink("Cadastre-se!", "About", "Home", att)</li>
+                    <li>@Html.ActionLink("Logar", "Index", "Home", attLogin)
+                    <li>@Html.ActionLink("Cadastre-se!", "About", "Home", attCadastro)</li>
                 </ul>
             </div>
         </div>
