--- a/src/PreTrip/Views/Home/Index.cshtml
+++ b/src/PreTrip/Views/Home/Index.cshtml
@@ -6,28 +6,30 @@
     <aside class="bg-img-content-img" 
            style="background-image: url(http://www.big1news.com.br/wp-content/uploads/2014/01/beto-carrero-parque.jpg)">
     </aside>
-    <div class="bg-img-content-ctn header-ctn col-sm-10 col-md-8">
-        <p class="text-center" style="font-size: 2rem; margin-top: 2em;">Encontre a melhor opção para a sua viagem.</p>
+    <div class="bg-img-content-ctn wrapcenter col-sm-10 col-md-8">
+        
+		<p class="text-center" style="font-size: 2rem; margin-top: 0.2em;">Encontre a melhor opção para a sua viagem.</p>
 
-        <form>
-            <div class="row">
-                <div class="col-xs-5">
+		<p class="text-center" style="font-size: 2rem; margin-top: 2em;">Mais de @ViewBag.QuantidadeViagens opções.</p>
+
+            <div class="row" style="margin-top: 3em;">
+                <div class="col-xs-8 wrapcenter">
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search for...">
+                        <input type="text" class="form-control" placeholder="Ex: Hopi Hari, CBLoL, Olimpíada Rio 2016...">
                         <span class="input-group-btn">
-                            <button class="btn btn-default" type="button">Go!</button>
+                            <button style="height: 34px;" class="btn btn-default" type="button">Pesquisar</button>
                         </span>
-                    </div><!-- /input-group -->
-                </div><!-- /.col-lg-6 -->
-            </div><!-- /.row --> 
-        </form>
+                    </div>
+                </div>
+            </div>
     </div>
 </div>
 
-<div class="row row-sep">
+<div class="row row-sep col-md-7">
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>
+		<i class="material-icons">directions_bus</i>
             ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
             enables a clean separation of concerns and gives you full control over markup
             for enjoyable, agile development.
