Index atualizado, design feito

--- a/src/PreTrip/Content/Site.css
+++ b/src/PreTrip/Content/Site.css
@@ -66,3 +66,11 @@ a .open .dropdown-toggle.btn-warning{
     margin: 0 auto;
 }
 
+.row-sep {
+    border-top: 1px solid #ccc;
+}
+
+.input-group {
+    padding: 1.2em 0;
+}
+
