--- a/src/PreTrip/Views/Shared/_Layout.cshtml
+++ b/src/PreTrip/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                     }
 
                     <li>@Html.ActionLink("Logar", "Index", "Home", attLogin)
-                    <li>@Html.ActionLink("Cadastre-se!", "About", "Home", attCadastro)</li>
+                    <li>@Html.ActionLink("Cadastre-se!", "", "Home", attCadastro)</li>
                 </ul>
             </div>
         </div>
