--- a/src/PreTrip/Views/Home/Cadastro.cshtml
+++ b/src/PreTrip/Views/Home/Cadastro.cshtml
@@ -1,5 +1,90 @@
-﻿@model PreTrip.Model.Classes.Usuario
+﻿
+@model PreTrip.Model.Classes.Usuario
 
-@{
-    Layout = null;
-}
+<div class="bg-img-content">
+    <aside class="bg-img-content-img"
+           style="background-image: url(http://www.bmaxturismo.com/bmax/wp-content/uploads/2015/02/20130426193604_dsc_0667grandookr.jpg)"></aside>
+        <!--Pesquisa-->
+        <div class="col-md-12" style="border-left: 1px solid #ccc">
+            <br/>
+            <p class="text-center" style="font-size: 2rem; margin-top: 0.2em;">Cadastre-se e organize sua própria caravana.</p>
+            <p class="text-center" style="font-size: 2rem; margin-top: 2em;">Cadastrando-se no site você terá um série de vantagens!!
+                <br/>
+                <br/>
+                Cadastre-se abaixo...
+            </p>
+            <div class="row" style="margin-top: 3em;">
+                <div class="col-xs-4 wrapcenter">
+                    <div class="input-group">
+                        <label> Nome: </label>
+                        <input type="text" class="form-control" placeholder="Digite seu nome...">
+
+                        <label> Telefone: </label>
+                        <input type="text" class="form-control" placeholder="Digite seu telefone...">
+
+                        <label> CPF: </label>
+                        <input type="text" class="form-control" placeholder="Digite seu cpf...">
+
+                        <label> Data de Nascimento: </label>
+                        <input type="text" class="form-control" placeholder="dd/mm/yyyy">
+
+                        <label> Login: </label>
+                        <input type="text" class="form-control" placeholder="Digite seu login...">
+                        <label> Senha: </label>
+                        <input type="text" class="form-control" placeholder="Digite sua senha...">                            
+                    </div>                  
+                    <span class="input-group-btn">
+                        <button style="height: 34px;margin-left:78%;" class="btn btn-warning" type="button">Cadastrar</button>
+                    </span>                                       
+                </div>
+            </div>
+        </div>
+    </div>
+<div class="row" style="margin-top: 10em;"></div>
+    <div class="row" style="margin-bottom: 3em;">
+        <div class="wrapcenter col-md-7">
+            <div class="col-md-7">
+                <h2>Organize sua Caravana</h2>
+                <p>
+                   Sempre foi um sonho conhecer lugares diferentes? Por que não organizar sua própia caravana para reunir os amigos e conhecer pessoas novas!
+                </p>
+            </div>
+            <div class="col-md-5">
+                <i style="font-size: 13rem;" class="material-icons pull-left">group</i>
+                <i style="font-size: 13rem;" class="material-icons pull-left">directions_bus</i>
+            </div>
+        </div>
+    </div>
+
+    <div class="row row-sep " style="background: #333;">
+        <div class="wrapcenter col-md-7">
+            <div class="col-md-12 text-center" style="color: #999; padding: 2em;">
+
+                <h2 style="color: #fff;">Realizando Sonhos</h2>
+                <p>
+                    Você pode organizar viagens para lugares fantásticos, onde você sempre sonhou em ir..
+                </p>
+
+                <div style="padding: 2em;">                   
+                    <i class="material-icons" style="font-size: 8rem; color: #1fbb01">sentiment_very_satisfied</i>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row row-sep" style="padding: 3em 0;">
+        <div class="wrapcenter col-md-7">
+            <div class="col-md-5">
+                <i style="font-size: 13rem;" class="material-icons pull-left">lock</i>
+                <i style="font-size: 13rem;" class="material-icons pull-left">shopping_cart</i>
+            </div>
+            <div class="col-md-7">
+                <h2>100% Segurança</h2>
+                <p>
+                    Segurança também é nosso ponto forte, nao se preocupe, apenas divirta-se.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="clearfix"></div>
