--- a/src/PreTrip/Views/Shared/_Layout.cshtml
+++ b/src/PreTrip/Views/Shared/_Layout.cshtml
@@ -30,10 +30,13 @@
                         //Pegos os atributos padrão à todos e adiciono o único a cada item
                         var attLogin = new { @class = att.@class + " btn-success" };
                         var attCadastro = new { @class = att.@class + " btn-warning" };
+                        var attHome = new { @class = att.@class + " btn-danger" };
                     }
 
+                    <li>@Html.ActionLink("Home", "", "Home", attHome)</li>
                     <li>@Html.ActionLink("Logar", "Index", "Home", attLogin)
-                    <li>@Html.ActionLink("Cadastre-se!", "", "Home", attCadastro)</li>
+                    <li>@Html.ActionLink("Cadastre-se!", "Cadastro", "Cadastro", attCadastro)</li>
+                    
                 </ul>
             </div>
         </div>
