Layout cadastro refeito. Ainda não funcional
A página de cadastro já comporta tabalhar com a model, mas o link de
cadastrar ainda não está redirecionando

--- a/src/PreTrip/Views/Home/Index.cshtml
+++ b/src/PreTrip/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
                 </div>
 
                 <div class="pull-right">
-                    <button type="submit" class="btn btn-primary">Entrar</button>
+                    @Html.ActionLink("Entrar", "Index", "Login", new { @class = "btn btn-primary" })
                     <button type="submit" class="btn btn-warning">Cadastrar</button>
                 </div>
             }
