--- a/src/PreTrip/Views/Home/Cadastro.cshtml
+++ b/src/PreTrip/Views/Home/Cadastro.cshtml
@@ -1,90 +1,93 @@
-﻿
-@model PreTrip.Model.Classes.Usuario
+﻿@model PreTrip.Model.Classes.Usuario
 
-<div class="bg-img-content">
-    <aside class="bg-img-content-img"
-           style="background-image: url(http://www.bmaxturismo.com/bmax/wp-content/uploads/2015/02/20130426193604_dsc_0667grandookr.jpg)"></aside>
-        <!--Pesquisa-->
-        <div class="col-md-12" style="border-left: 1px solid #ccc">
-            <br/>
-            <p class="text-center" style="font-size: 2rem; margin-top: 0.2em;">Cadastre-se e organize sua própria caravana.</p>
-            <p class="text-center" style="font-size: 2rem; margin-top: 2em;">Cadastrando-se no site você terá um série de vantagens!!
-                <br/>
-                <br/>
-                Cadastre-se abaixo...
+<div class="row col-md-8 wrapcenter" style="padding: 3em 0">
+    <div class="col-md-4" style="padding: 5em 0">
+        <h2>Organize sua Caravana</h2>
+        <p>
+            Sempre foi um sonho conhecer lugares diferentes? Por que não organizar sua própia caravana para reunir os amigos e conhecer pessoas novas!
+        </p>
+
+        <i class="material-icons" style="font-size: 10rem; vertical-align:middle; color: #808080">clear_all</i>
+        <i class="material-icons" style="font-size: 13rem; vertical-align:middle; color: #0992cf">airport_shuttle</i>
+    </div>
+
+    <div class="col-md-8">
+        @using (Html.BeginForm("Cadastrar", "Cadastro", FormMethod.Post))
+        {
+            //@Html.ValidationSummary(true);
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-addon">
+                        <i class="material-icons" style="font-size: 16px">person</i>
+                    </div>
+                    @Html.EditorFor(x => x.Login, new { htmlAttributes = new { @class = "form-control", placeholder = "Usuário" } })
+                </div>
+
+                <div class="input-group">
+                    <div class="input-group-addon">
+                        <i class="material-icons" style="font-size: 16px">lock</i>
+                    </div>
+                    @Html.PasswordFor(x => x.Senha, new { @class = "form-control", placeholder = "Senha" })
+                </div>
+
+                <div class="input-group">
+                    <div class="input-group-addon">
+                        <i class="material-icons" style="font-size: 16px">face</i>
+                    </div>
+                    @Html.EditorFor(x => x.Pessoa.Nome, new { htmlAttributes = new { @class = "form-control", placeholder = "Nome" } })
+                </div>
+
+                <div class="input-group">
+                    <div class="input-group-addon">
+                        <i class="material-icons" style="font-size: 16px">contact_mail</i>
+                    </div>
+                    @Html.EditorFor(x => x.Email, new { htmlAttributes = new { @class = "form-control", placeholder = "Email" } })
+                </div>
+
+                <div class="input-group">
+                    <div class="input-group-addon">
+                        <i class="material-icons" style="font-size: 16px">local_phone</i>
+                    </div>
+                    @Html.EditorFor(x => x.Pessoa.Telefone, new { htmlAttributes = new { @class = "form-control", placeholder = "Telefone" } })
+                </div>
+
+                <div class="input-group">
+                    <div class="input-group-addon">
+                        <i class="material-icons" style="font-size: 16px">subtitles</i>
+                    </div>
+                    @Html.EditorFor(x => x.Pessoa.Cpf, new { htmlAttributes = new { @class = "form-control", placeholder = "Cpf" } })
+                </div>
+
+                <div class="input-group">
+                    <div class="input-group-addon">
+                        <i class="material-icons" style="font-size: 16px">date_range</i>
+                    </div>
+                    @Html.EditorFor(x => x.Pessoa.DtNascimento, new { htmlAttributes = new { @class = "form-control", placeholder = "Data", type = "date" } })
+                </div>
+            </div>
+
+            <div class="pull-right">
+                <button type="submit" class="btn btn-warning pull-right">Confirmar</button>
+            </div>
+        }
+    </div>
+</div>
+
+<div class="row row-sep " style="background: #333;">
+    <div class="wrapcenter col-md-7">
+        <div class="col-md-12 text-center" style="color: #999; padding: 2em;">
+
+            <h2 style="color: #fff;">Realizando Sonhos</h2>
+            <p>
+                Você pode organizar viagens para lugares fantásticos, onde você sempre sonhou em ir..
             </p>
-            <div class="row" style="margin-top: 3em;">
-                <div class="col-xs-4 wrapcenter">
-                    <div class="input-group">
-                        <label> Nome: </label>
-                        <input type="text" class="form-control" placeholder="Digite seu nome...">
 
-                        <label> Telefone: </label>
-                        <input type="text" class="form-control" placeholder="Digite seu telefone...">
-
-                        <label> CPF: </label>
-                        <input type="text" class="form-control" placeholder="Digite seu cpf...">
-
-                        <label> Data de Nascimento: </label>
-                        <input type="text" class="form-control" placeholder="dd/mm/yyyy">
-
-                        <label> Login: </label>
-                        <input type="text" class="form-control" placeholder="Digite seu login...">
-                        <label> Senha: </label>
-                        <input type="text" class="form-control" placeholder="Digite sua senha...">                            
-                    </div>                  
-                    <span class="input-group-btn">
-                        <button style="height: 34px;margin-left:78%;" class="btn btn-warning" type="button">Cadastrar</button>
-                    </span>                                       
-                </div>
+            <div style="padding: 2em;">
+                <i class="material-icons" style="font-size: 8rem; color: #1fbb01">nature_people</i>
             </div>
+
         </div>
     </div>
-<div class="row" style="margin-top: 10em;"></div>
-    <div class="row" style="margin-bottom: 3em;">
-        <div class="wrapcenter col-md-7">
-            <div class="col-md-7">
-                <h2>Organize sua Caravana</h2>
-                <p>
-                   Sempre foi um sonho conhecer lugares diferentes? Por que não organizar sua própia caravana para reunir os amigos e conhecer pessoas novas!
-                </p>
-            </div>
-            <div class="col-md-5">
-                <i style="font-size: 13rem;" class="material-icons pull-left">group</i>
-                <i style="font-size: 13rem;" class="material-icons pull-left">directions_bus</i>
-            </div>
-        </div>
-    </div>
+</div>
 
-    <div class="row row-sep " style="background: #333;">
-        <div class="wrapcenter col-md-7">
-            <div class="col-md-12 text-center" style="color: #999; padding: 2em;">
-
-                <h2 style="color: #fff;">Realizando Sonhos</h2>
-                <p>
-                    Você pode organizar viagens para lugares fantásticos, onde você sempre sonhou em ir..
-                </p>
-
-                <div style="padding: 2em;">                   
-                    <i class="material-icons" style="font-size: 8rem; color: #1fbb01">sentiment_very_satisfied</i>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row row-sep" style="padding: 3em 0;">
-        <div class="wrapcenter col-md-7">
-            <div class="col-md-5">
-                <i style="font-size: 13rem;" class="material-icons pull-left">lock</i>
-                <i style="font-size: 13rem;" class="material-icons pull-left">shopping_cart</i>
-            </div>
-            <div class="col-md-7">
-                <h2>100% Segurança</h2>
-                <p>
-                    Segurança também é nosso ponto forte, nao se preocupe, apenas divirta-se.
-                </p>
-            </div>
-        </div>
-    </div>
-
-    <div class="clearfix"></div>
+<div class="clearfix"></div>
