--- a/src/PreTrip/Views/Home/Cadastro.cshtml
+++ b/src/PreTrip/Views/Home/Cadastro.cshtml
@@ -14,7 +14,7 @@
     <div class="col-md-8">
         @using (Html.BeginForm("Cadastrar", "Cadastro", FormMethod.Post))
         {
-            //@Html.ValidationSummary(true);
+            @Html.ValidationSummary(true);
             <div class="form-group">
                 <div class="input-group">
                     <div class="input-group-addon">
