Iniciado layout administrativo

--- a/src/PreTrip/Views/Shared/_Layout.cshtml
+++ b/src/PreTrip/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                     <span class="icon-bar"></span>
                 </button>
             </div>
-            <div class="navbar-collapse collapse">
+            <div class="navbar-collapse collapse">             
                 <ul class="nav navbar-nav navbar-right">
                     @{
                         //Atributos comuns de cada botão do menu
@@ -30,16 +30,15 @@
                         //Pegos os atributos padrão à todos e adiciono o único a cada item
                         var attLogin = new { @class = att.@class + " btn-success" };
                         var attCadastro = new { @class = att.@class + " btn-warning" };
-                        var attHome = new { @class = att.@class + " btn-danger" };
+                        var attHome = new { @class = att.@class + " btn-danger" };                     
                     }
-
+                
                     <li>@Html.ActionLink("Home", "", "Home", attHome)</li>
                     <li>@Html.ActionLink("Logar", "Index", "Home", attLogin)
-                    <li>@Html.ActionLink("Cadastre-se!", "Cadastro", "Cadastro", attCadastro)</li>
-                    
+                    <li>@Html.ActionLink("Cadastre-se!", "Cadastro", "Home", attCadastro)</li>                    
                 </ul>
             </div>
-        </div>
+        </div>       
     </div>
 
     
@@ -49,12 +48,13 @@
         <hr />
         <!--Footer-->
         <footer class="wrapcenter row col-md-9">
-            <p>&copy; @DateTime.Now.Year - @ViewBag.Title</p>
+            <p>&copy; @DateTime.Now.Year - @ViewBag.Title   </p>
         </footer>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
     @RenderSection("scripts", required: false)
     @Scripts.Render("~/bundles/bootstrap")
+    
 </body>
 </html>
