--- a/src/PreTrip/Views/Login/Administrativo.cshtml
+++ b/src/PreTrip/Views/Login/Administrativo.cshtml
@@ -3,7 +3,7 @@
 <div class="bg-img-content">    
     <ul class="nav nav-pills" style="margin-top:0.2%;margin-left:2%;">
         <li role="presentation" class="dropdown">
-            <button class="btn btn-danger dropdown-toggle" type="button" data-toggle="dropdown">
+            <button class="btn btn-danger dropdown-toggle" type="button" data-toggle="dropdown" style="border-radius:5px;">
                 Gerenciar Usuarios <span class="caret"></span>
             </button>
                 <ul class="dropdown-menu">
@@ -13,7 +13,7 @@
                 </ul>
         </li>
         <li role="presentation" class="dropdown">
-            <button class="btn btn-warning dropdown-toggle" type="button" data-toggle="dropdown">
+            <button class="btn btn-danger dropdown-toggle" type="button" data-toggle="dropdown" style="border-radius:5px;">
                 Gerenciar Viagens <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
@@ -23,7 +23,7 @@
             </ul>
         </li> 
         <li role="presentation" class="dropdown">
-            <button class="btn btn-warning dropdown-toggle" type="button" data-toggle="dropdown">
+            <button class="btn btn-danger dropdown-toggle" type="button" data-toggle="dropdown" style="border-radius:5px;">
                 Gerenciar Históricos <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
@@ -37,85 +37,62 @@
     <!--Pesquisa-->
     <div class="col-md-12" style="border-left: 1px solid #ccc">
         <br />
-        <p class="text-center" style="font-size: 2rem; margin-top: 0.2em;">Cadastre-se e organize sua própria caravana.</p>
-        <p class="text-center" style="font-size: 2rem; margin-top: 2em;">
-            Cadastrando-se no site você terá um série de vantagens!!
-            <br />
-            <br />
-            Cadastre-se abaixo...
-        </p>
+        <p class="text-center" style="font-size: 2rem; margin-top: 0.2em;">Olá Administrador [Nome].</p>        
         <div class="row" style="margin-top: 3em;">
-            <div class="col-xs-4 wrapcenter">
-                <div class="input-group">
-                    <label> Nome: </label>
-                    <input type="text" class="form-control" placeholder="Digite seu nome...">
+            <div class="col-xs-5 wrapcenter">
+                <h3>Ultimas Viagens Registradas</h3>
 
-                    <label> Telefone: </label>
-                    <input type="text" class="form-control" placeholder="Digite seu telefone...">
+                <br/>
 
-                    <label> CPF: </label>
-                    <input type="text" class="form-control" placeholder="Digite seu cpf...">
+                <table class="table">
+                    <tr>
+                        <th>Usuário</th>
+                        <th>Descrição Viagem</th>
+                        <th>Origem </th>
+                        <th>Destino</th>
+                    </tr>
 
-                    <label> Data de Nascimento: </label>
-                    <input type="text" class="form-control" placeholder="dd/mm/yyyy">
+                    <tr>
+                        <td>Xablau</td>
+                        <td>Lugar maravilhoso, que todos um dia devem conhecer</td>
+                        <td>Brasil</td>
+                        <td>Cancún</td>
+                    </tr>
+                </table>
 
-                    <label> Login: </label>
-                    <input type="text" class="form-control" placeholder="Digite seu login...">
-                    <label> Senha: </label>
-                    <input type="text" class="form-control" placeholder="Digite sua senha...">
-                </div>
-                <span class="input-group-btn">
-                    <button style="height: 34px;margin-left:78%;" class="btn btn-warning" type="button">Cadastrar</button>
-                </span>
             </div>
         </div>
     </div>
 </div>
 <div class="row" style="margin-top: 10em;"></div>
-<div class="row" style="margin-bottom: 3em;">
-    <div class="wrapcenter col-md-7">
-        <div class="col-md-7">
-            <h2>Organize sua Caravana</h2>
-            <p>
-                Sempre foi um sonho conhecer lugares diferentes? Por que não organizar sua própia caravana para reunir os amigos e conhecer pessoas novas!
-            </p>
-        </div>
-        <div class="col-md-5">
-            <i style="font-size: 13rem;" class="material-icons pull-left">group</i>
-            <i style="font-size: 13rem;" class="material-icons pull-left">directions_bus</i>
-        </div>
-    </div>
-</div>
+
 
 <div class="row row-sep " style="background: #333;">
     <div class="wrapcenter col-md-7">
         <div class="col-md-12 text-center" style="color: #999; padding: 2em;">
 
-            <h2 style="color: #fff;">Realizando Sonhos</h2>
+            <h2 style="color: #fff;">Evento de Destaque</h2>
             <p>
-                Você pode organizar viagens para lugares fantásticos, onde você sempre sonhou em ir..
+                Abaixo está o evento mais lucrativo atualmente.
             </p>
 
             <div style="padding: 2em;">
-                <i class="material-icons" style="font-size: 8rem; color: #1fbb01">sentiment_very_satisfied</i>
+                <p style="color:white;font-weight:bolder;font-size:20px;">[Lucro atual do evento]</p>
+                    <i class="material-icons" style="font-size: 8rem; color: #1fbb01">sentiment_very_satisfied</i><!--Lucro alto/ lucro > 8.000-->
+                <i class="material-icons" style="font-size: 8rem; color: #1fbb01">sentiment_satisfied</i><!--Lucro Médio >/ lucro > 4.000 e lucro < 8.000-->
+                <i class="material-icons" style="font-size: 8rem; color: #e28400">sentiment_dissatisfied</i><!--Lucro baixo/lucro < 4.000 -->
+              
+                <br/>
+                <p style="color:white;">[Origem Viagem] promovido por [Nome Usuário]</p>
             </div>
         </div>
     </div>
 </div>
 
-<div class="row row-sep" style="padding: 3em 0;">
-    <div class="wrapcenter col-md-7">
-        <div class="col-md-5">
-            <i style="font-size: 13rem;" class="material-icons pull-left">lock</i>
-            <i style="font-size: 13rem;" class="material-icons pull-left">shopping_cart</i>
-        </div>
-        <div class="col-md-7">
-            <h2>100% Segurança</h2>
-            <p>
-                Segurança também é nosso ponto forte, nao se preocupe, apenas divirta-se.
-            </p>
-        </div>
-    </div>
+<div class="row row-sep" style="padding: 3em 0;">    
+    <div class="col-md-12">
+        <h2>Lucro da Empresa: <span style="color:green">[Lucro Atual da Empresa] </span> </h2>  
+    </div> 
 </div>
 
 <div class="clearfix"></div>
