--- a/src/PreTrip/Views/Login/Administrativo.cshtml
+++ b/src/PreTrip/Views/Login/Administrativo.cshtml
@@ -1,5 +1,25 @@
 ﻿@model PreTrip.Model.Classes.Usuario
 
+<!-- Modal -->
+<div class="modal fade" id="modalCadastroUsuario" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Cadastro de Usuário</h4>
+            </div>
+            <div class="modal-body">
+               @using (Html.BeginForm("CadastrarUsuario", "Administrativo", FormMethod.Post)) 
+               { 
+                    @Html.Partial("~/Views/PartialView/_CadastroUsuarioPartialView.cshtml", @Model);
+               }
+            </div>
+            <br/>
+            <div class="modal-footer"></div>
+        </div>
+    </div>
+</div>
+
 <div class="bg-img-content">    
     <ul class="nav nav-pills" style="margin-top:0.2%;margin-left:2%;">
         <li role="presentation" class="dropdown">
@@ -8,7 +28,10 @@
             </button>
                 <ul class="dropdown-menu">
                     <li>
-                        <a>Vizualizar Todos Usuários</a>
+                        <a>Vizualizar Todos Usuários</a>                                         
+                    </li>
+                    <li>
+                        <a data-toggle="modal" data-target="#modalCadastroUsuario">Cadastrar Novo Usuário</a>
                     </li>
                 </ul>
         </li>
