--- a/src/PreTrip/Views/Administrativo/Administrativo.cshtml
+++ b/src/PreTrip/Views/Administrativo/Administrativo.cshtml
@@ -60,7 +60,7 @@
     <!--Pesquisa-->
     <div class="col-md-12" style="border-left: 1px solid #ccc">
         <br />
-        <p class="text-center" style="font-size: 2rem; margin-top: 0.2em;">Olá Administrador [Nome].</p>        
+        <p class="text-center" style="font-size: 2rem; margin-top: 0.2em;">Olá [Nome] .</p>
         <div class="row" style="margin-top: 3em;">
             <div class="col-xs-5 wrapcenter">
                 <h3>Ultimas Viagens Registradas</h3>
