--- a/src/PreTrip/Views/Shared/Cadastro/_CadastroUsuarioPartialView.cshtml
+++ b/src/PreTrip/Views/Shared/Cadastro/_CadastroUsuarioPartialView.cshtml
@@ -1,5 +1,5 @@
 ﻿@model PreTrip.Model.Classes.Usuario
-@Html.ValidationSummary(true)
+@Html.ValidationSummary()
 <div class="form-group">
     <div class="input-group">
         <div class="input-group-addon">
