--- a/src/PreTrip/Views/Home/Cadastro.cshtml
+++ b/src/PreTrip/Views/Home/Cadastro.cshtml
@@ -1,5 +1,7 @@
 ﻿@model PreTrip.Model.Classes.Usuario
-
+@{
+    ViewBag.Title = "Pre-Trip";
+}
 <div class="row col-md-8 wrapcenter" style="padding: 3em 0">
     <div class="col-md-4" style="padding: 5em 0">
         <h2>Organize sua Caravana</h2>
