--- a/src/PreTrip/Views/Shared/Administrativo/_AdministrativoBefore.cshtml
+++ b/src/PreTrip/Views/Shared/Administrativo/_AdministrativoBefore.cshtml
@@ -24,9 +24,9 @@
     <div class="col-md-10 wrapcenter">
         <div class="col-md-2">
             <ul class="nav nav-pills nav-stacked ">
-                <li role="presentation" class="active"><a href="#">Financeiro</a></li>
+                <li role="presentation"><a href="#">Financeiro</a></li>
 
-                <li role="presentation" class="dropdown">
+                <li role="presentation" class="dropdown" class="active">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                         Gerenciar Usuários <span class="caret"></span>
                     </a>
