Refatorado controllers e views

--- a/src/PreTrip/Views/Home/Index.cshtml
+++ b/src/PreTrip/Views/Home/Index.cshtml
@@ -10,8 +10,15 @@
     <div class="row bg-img-content-ctn wrapcenter col-sm-10 col-md-8">
         <!--Login-->
         <div class="col-md-4" style="padding-right: 3em;">
-            @using (Html.BeginForm("Logar", "Login", FormMethod.Post, new { @class = "row" }))
-            {
+            @using (Html.BeginForm("Login", "Home", FormMethod.Post, new { @class = "row" }))
+            {                
+                if (!Html.ViewData.ModelState.IsValid)
+                {
+                    <div class="alert alert-danger validation-box" role="alert">
+                        @Html.ValidationSummary(false)
+                    </div>
+                }
+                
                 <div class="form-group">
                     <div class="input-group">
                         <div class="input-group-addon">
@@ -29,7 +36,7 @@
                 </div>
 
                 <div class="pull-right">
-                    @Html.ActionLink("Cadastre-se!", "Cadastro", "Home", new { @class = "btn btn-primary" })
+                    @Html.ActionLink("Cadastre-se!", "Cadastrar", "Home", new { @class = "btn btn-primary" })
                     <button type="submit" class="btn btn-warning">Logar</button>
                 </div>
             }
