--- a/src/PreTrip/Views/Shared/_Layout.cshtml
+++ b/src/PreTrip/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
 
                     <li>@Html.ActionLink("Home", "Index", "Home", attHome)</li>
                     <li>@Html.ActionLink("Logar", "Index", "Home", attLogin)
-                    <li>@Html.ActionLink("Cadastre-se!", "Cadastro", "Home", attCadastro)</li>                    
+                    <li>@Html.ActionLink("Cadastre-se!", "Cadastrar", "Home", attCadastro)</li>                    
                 </ul>
             </div>
         </div>
