--- a/src/PreTrip/Views/Shared/Cadastro/_CadastroUsuarioPartialView.cshtml
+++ b/src/PreTrip/Views/Shared/Cadastro/_CadastroUsuarioPartialView.cshtml
@@ -1,5 +1,14 @@
 ﻿@model PreTrip.Model.Classes.Usuario
-@Html.ValidationSummary(false)
+
+@*Adiciona box de validação*@
+@if (!Html.ViewData.ModelState.IsValid)
+{
+    <div class="alert alert-danger validation-box" role="alert">
+        @*Imprime todos os erros de validação*@
+        @Html.ValidationSummary(false)
+    </div>
+}
+
 <div class="form-group">
     <div class="input-group">
         <div class="input-group-addon">
@@ -36,7 +45,7 @@
         @Html.EditorFor(x => x.Pessoa.Telefone, new { htmlAttributes = new { @class = "form-control", placeholder = "Telefone" } })
     </div>
 
-    <div class="input-group">
+    <div class="input-group">        
         <div class="input-group-addon">
             <i class="material-icons" style="font-size: 16px">subtitles</i>
         </div>
