--- a/src/PreTrip/Content/Site.css
+++ b/src/PreTrip/Content/Site.css
@@ -80,3 +80,9 @@ a .open .dropdown-toggle.btn-warning{
     padding: 1.2em 0;
 }
 
+.validation-box ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
