--- a/src/PreTrip/Views/Home/Index.cshtml
+++ b/src/PreTrip/Views/Home/Index.cshtml
@@ -12,13 +12,8 @@
         <div class="col-md-4" style="padding-right: 3em;">
             @using (Html.BeginForm("Login", "Home", FormMethod.Post, new { @class = "row" }))
             {                
-                if (!Html.ViewData.ModelState.IsValid)
-                {
-                    <div class="alert alert-danger validation-box" role="alert">
-                        @Html.ValidationSummary(false)
-                    </div>
-                }
-                
+                @Html.Partial("~/Views/Shared/Validacao/_ValidacaoBasica.cshtml");
+
                 <div class="form-group">
                     <div class="input-group">
                         <div class="input-group-addon">
