--- a/src/PreTrip/Views/Shared/Cadastro/_CadastroUsuarioPartialView.cshtml
+++ b/src/PreTrip/Views/Shared/Cadastro/_CadastroUsuarioPartialView.cshtml
@@ -1,13 +1,6 @@
 ﻿@model PreTrip.Model.Classes.Usuario
 
-@*Adiciona box de validação*@
-@if (!Html.ViewData.ModelState.IsValid)
-{
-    <div class="alert alert-danger validation-box" role="alert">
-        @*Imprime todos os erros de validação*@
-        @Html.ValidationSummary(false)
-    </div>
-}
+@Html.Partial("~/Views/Shared/Validacao/_ValidacaoBasica.cshtml");
 
 <div class="form-group">
     <div class="input-group">
