--- a/src/PreTrip/Views/Home/Index.cshtml
+++ b/src/PreTrip/Views/Home/Index.cshtml
@@ -7,11 +7,11 @@
 <div class="bg-img-content">
     <aside class="bg-img-content-img"
            style="background-image: url(http://www.big1news.com.br/wp-content/uploads/2014/01/beto-carrero-parque.jpg)"></aside>
-    <div class="row bg-img-content-ctn wrapcenter col-sm-10 col-md-8">
+    <div class="row bg-img-content-ctn wrapcenter col-xs-12 col-md-10 col-lg-8">
         <!--Login-->
         <div class="col-md-4" style="padding-right: 3em;">
             @using (Html.BeginForm("Login", "Home", FormMethod.Post, new { @class = "row" }))
-            {                
+            {
                 @Html.Partial("~/Views/Shared/Validacao/_ValidacaoBasica.cshtml");
 
                 <div class="form-group">
@@ -35,7 +35,7 @@
                     <button type="submit" class="btn btn-warning">Logar</button>
                 </div>
             }
-            
+
         </div>
 
         <!--Pesquisa-->
