Criado açao de buscar todas empresas cadastradas

--- a/src/PreTrip/Views/Shared/_Layout.cshtml
+++ b/src/PreTrip/Views/Shared/_Layout.cshtml
@@ -55,6 +55,12 @@
     @Scripts.Render("~/bundles/jquery")
     @RenderSection("scripts", required: false)
     @Scripts.Render("~/bundles/bootstrap")
+
+    <style>
+        a:hover{
+            cursor:pointer;
+        }
+    </style>
     
 </body>
 </html>
