--- a/src/PreTrip/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml
+++ b/src/PreTrip/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml
@@ -51,7 +51,7 @@
             </button>
             <ul class="dropdown-menu">
                 <li>@Html.ActionLink("Cadastrar Empresa", "CadastroEmpresa", "Usuario")</li>
-                <li><a href="#">Consultar Minhas Empresas</a></li>
+                <li>@Html.ActionLink("Consultar Minhas Empresas", "VisualizarEmpresas", "Usuario")</li>                
             </ul>
         </div>
     </div>
