Criada nova sessão.

--- a/src/PreTrip/Views/Usuarios/Index.cshtml
+++ b/src/PreTrip/Views/Usuarios/Index.cshtml
@@ -1,14 +1,3 @@
-﻿@{
-    ViewBag.Title = "title";
-}
+﻿@using System.Web.UI.WebControls
 
-@using System.Web.UI.WebControls
-@model PreTrip.Model.Classes.Usuario
-
-@Html.Partial("~/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml");
-
-<!-- Tela de cadastro de empresas-->
-TELA INICIAL
-
-@Html.Partial("~/Views/Shared/Usuario/_UsuarioAfterPartialView.cshtml");
-
+@Html.Partial("~/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml")
