--- a/src/PreTrip/Views/Viagens/Cadastrar.cshtml
+++ b/src/PreTrip/Views/Viagens/Cadastrar.cshtml
@@ -183,7 +183,7 @@
             <hr />
 
             <div class="pull-right">
-                @Html.ActionLink("Cancelar", "Index", "Usuario", new { @class = "btn btn-danger" })
+                @Html.ActionLink("Cancelar", "Index", "Usuarios", new { @class = "btn btn-danger" })
                 <button type="submit" class="btn btn-warning">Cadastrar</button>
             </div>
         }
