Alterada tela de usuário

--- a/src/PreTrip/Views/Shared/Usuario/_UsuarioAfterPartialView.cshtml
+++ b/src/PreTrip/Views/Shared/Usuario/_UsuarioAfterPartialView.cshtml
@@ -1,14 +1,4 @@
-﻿<div class="row row-sep" style="padding: 3em 0;">
-    <div class="wrapcenter col-md-7">
-        <div class="col-md-5">
-            <i style="font-size: 13rem;" class="material-icons pull-left">lock</i>
-            <i style="font-size: 13rem;" class="material-icons pull-left">shopping_cart</i>
-        </div>
-        <div class="col-md-7">
-            <h2>100% Segurança</h2>
-            <p>
-                Fique tranquilo! Garantimos sua segurança na hora da compra, contamos com criptografias e não guardamos seus dados.
-            </p>
+﻿            </div>
         </div>
     </div>
 </div>
