--- a/src/PreTrip/Views/Usuarios/CadastroEmpresa.cshtml
+++ b/src/PreTrip/Views/Usuarios/CadastroEmpresa.cshtml
@@ -5,14 +5,14 @@
 @using System.Web.UI.WebControls
 @model PreTrip.Model.Classes.Usuario
 
-@Html.Partial("~/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml");
+@Html.Partial("~/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml")
 
 <!-- Tela de cadastro de empresas-->
 <div class="row row-sep " style="background:white;">
     <div class="wrapcenter col-md-7">
         <div class="col-md-12 text-center" style="color: #999; padding: 2em;">
             <div class="form-group">
-                @Html.Partial("~/Views/Shared/Cadastro/_CadastroEmpresaPartialView.cshtml");
+                @Html.Partial("~/Views/Shared/Cadastro/_CadastroEmpresaPartialView.cshtml")
             </div>
             <br />
             <p>
@@ -30,4 +30,4 @@
     </div>
 </div>
 
-@Html.Partial("~/Views/Shared/Usuario/_UsuarioAfterPartialView.cshtml");
+@Html.Partial("~/Views/Shared/Usuario/_UsuarioAfterPartialView.cshtml")
