--- a/src/PreTrip/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml
+++ b/src/PreTrip/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml
@@ -1,26 +1,28 @@
 ﻿@using PreTrip.Session
 
-<div class="row" style="background-color: #b9b9b9">
-    <div class="col-md-8">
-        <div class="col-md-6">
-            <h3>@PreTripSession.Usuario.Pessoa.Nome</h3>
-            <p>Procure por sugestões, cadastre viagens.</p>
-        </div>
+<div class="row" style="background-color: #e8e8e8">
+    <div class="col-md-10 wrapcenter" style="padding: 3em 0">
+        <div class="row">
+            <div class="col-md-6">
+                <h3>@PreTripSession.Usuario.Pessoa.Nome</h3>
+                <p>Procure por sugestões, cadastre viagens.</p>
+            </div>
 
-        <div class="col-md-6">
-
-        </div>
-    </div>
-</div>
-
-<div class="row">
-    <div class="col-md-10">
-        <div class="col-md-5">
-
-        </div>
-
-        <div class="col-md-7">
-
+            <div class="col-md-6 text-right">
+                @Html.ActionLink("Meu Perfil", "Alterar", "Usuarios", new { @class = "btn" })
+            </div>
         </div>
     </div>
 </div>
+
+<div class="row" style="margin: 3em 0;">
+    <div class="col-md-10 wrapcenter">
+        <div class="panel panel-default panel-body">
+            <div class="col-md-4">
+                <div class="btn-group-vertical" role="group" style="width: 100%;">
+                    <button type="button" class="btn btn-default">Empresa</button>
+                    <button type="button" class="btn btn-default">Viagens</button>
+                </div>
+            </div>
+
+            <div class="col-md-8">
