--- a/src/PreTrip/Views/Usuarios/Index.cshtml
+++ b/src/PreTrip/Views/Usuarios/Index.cshtml
@@ -1,3 +1,7 @@
 ﻿@using System.Web.UI.WebControls
 
 @Html.Partial("~/Views/Shared/Usuario/_UsuarioBeforePartialView.cshtml")
+
+Usuário Index
+
+@Html.Partial("~/Views/Shared/Usuario/_UsuarioAfterPartialView.cshtml")
