Adicionado menu de pesquisar empresas

--- a/src/PreTrip/Views/Home/Index.cshtml
+++ b/src/PreTrip/Views/Home/Index.cshtml
@@ -46,7 +46,7 @@
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="Ex: Hopi Hari, CBLoL...">
                         <span class="input-group-btn">
-                            <button style="height: 34px;" class="btn btn-default" type="button">Pesquisar</button>
+                            @Html.ActionLink("Pesquisar", "Index", "Viagens", new { @class = "btn btn-default" })                           
                         </span>
                     </div>
                 </div>
