Viagens já são listadas

--- a/src/PreTrip/Views/Shared/_Layout.cshtml
+++ b/src/PreTrip/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@{
+	ViewBag.Title = "PreTrip - Seu sonho no seu alcance!";
+}
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
